
* Added function "time.to.event" returning the time (sum to position) to a specified value 

* Added function "cgls_urls" for returning download URL from CGLS query

* Fixed bug in insert associated with MARGIN argument

* Fixed bug in crossCorrelation where the I value was being erroneously
  corrected for population (thanks to GitHub user MarHer90). 
 
spatialEco_1.3-8
================= 
 
* Added zero covariance error check in collinear  
 
* Added support for terra class objects in rasterCorrelation  

* Added silhouettes to optimal.k output    

spatialEco_2.0-0
================= 

**** Jumped to major version release

* Converted all functions that historically relied on sp, raster, rgeos, rgdal 
  and maptools packages to sf and terra and optimized code structure in many 
  functions. 

* Function enhancement raster.downscale to expand to multivariate model with
  optional output for confidence/prediction intervals and MSE rasters.  

* Added function "remove_duplicates" for removing duplicate duplicate feature geometries 

* Added function "all_pairwise" creates a list of all pairwise combinations of a vector 

* Added function "sieve" that creates a MMU for an integer raster 


* Added function "bbox_extent" creates a bounding box polygon representing the extent 
  of a feature or raster                                                   

* depreciated a few functions in lue of efficient alternatives in sf and terra

spatialEco_2.0-01
=================   

* Fixed bug in sf.kde (thanks to Dirk Pflugmacher for pointing out rotation issue)  

* Added function sf_dissolve for dissolving polygon features

* Added function squareBuffer for creating square buffers

* Fixed bug in raster.downsample where plot returned error when scatter=TRUE with one covariate  

* Added function aspline.downscale for downscaling rasters using multivariate adaptive 
  regression splines (thanks to discussion with Felipe Benavides)